--- a/lolproj.vcxproj
+++ b/lolproj.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Champion.cpp" />
     <ClCompile Include="Controller.cpp" />
     <ClCompile Include="Interface.cpp" />
     <ClCompile Include="lolproj.cpp" />
@@ -146,6 +147,7 @@
   <ItemGroup>
     <ClInclude Include="Controller.h" />
     <ClInclude Include="Interface.h" />
+    <ClInclude Include="Champion.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
