--- a/lolproj.vcxproj.filters
+++ b/lolproj.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="InitProcessor.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="StringUtil.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Interface.h">
@@ -63,6 +66,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="InitProcessor.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="StringUtil.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
